<resources>
    <string name="app_name">DejaPhoto</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="settings_title">Settings</string>
    <string name="dejavu_mode">Dejavu Mode</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="album">Album</string>
    <string name="slideshow">Slideshow</string>
    <string name="stop_after">Stop after</string>
    <string name="each_photo">Each photo</string>
    <string name="seconds">seconds</string>
    <string name="LocationDenied">Location permission is denied. Do you want to turn it on?</string>
    <string name="login">login</string>
    <string name="setWallpaper">Set\nWallpapaer</string>
    <string name="restoreWallpaper">Restore\nWallpapaer</string>
    <string name="morePhotos">More\nPhotos</string>
    <string name="takePhotos">Take\nPhotos</string>
    <string name="display">Display</string>
    <string name="user">User</string>
    <string name="friend">Friend</string>
    <string name="share">Share</string>
    <string name="send">SEND</string>
    <string name="back">Back</string>
    <string name="location_change_message">Enter the new name for the location:</string>
</resources>
